# Leetrank_Project

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .gitattributes  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc.json  .vercelignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.vi.md  Dockerfile  LICENSE  Makefile  README.md  README.vi.md  RULES.md  SECURITY.md  SECURITY.vi.md  codecov.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tmp_sub7.json  tsconfig.json  vercel.json  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-tests.yml  bundle.yml  ci.yml  codeql.yml  daily-challenge.yml  docker-publish.yml  e2e.yml  gitleaks.yml  lighthouse.yml  (+10 more)
docs/: VERCEL_DEPLOYMENT.md  accessibility.md  load-testing.md  onboarding.md  openapi.yaml  release.md  troubleshooting.md  web-app.md
e2e/: README.md  golden-path.spec.ts  i18n-consistency.spec.ts  manual-ux-pass.spec.ts  smoke.spec.ts  submit-auth-required.spec.ts  theme.spec.ts
judge-service/: Dockerfile  README.md  docker-compose.yml  exec.go  go.mod  go.sum  languages.go  languages.json  main.go  profiles.go  profiles.json  profiles_test.go  sandbox.go  sandbox_test.go  scheduler.go  scheduler_test.go
messages/: en.json  vi.json
prisma/: schema.prisma  seed-achievements.ts  seed-bigdata.ts  seed-bulk.ts  seed-extra.ts  seed-study-plans.ts  seed-topics.ts  seed-users-submissions.ts  seed.ts
public/: .gitkeep  sw.js
scripts/: backup-postgres.sh  load-test-fixtures.mjs  load-test.mjs  restore-postgres.sh
services/analytics-python/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/analytics-python/app/: __init__.py  auth.py  cache.py  config.py  db.py  main.py  metrics.py  queries.py  schemas.py
services/analytics-python/tests/: conftest.py  test_cache.py  test_contest_deltas.py  test_main.py
services/leaderboard-rust/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/leaderboard-rust/src/: auth.rs  cache.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  state.rs
services/leaderboard-rust/tests/: integration_test.rs
src/: middleware.ts
(+697 files in other folders)
