[project]
name = "leetrank-analytics-python"
version = "0.1.0"
description = "LeetRank analytics service: heatmaps, problem stats, contest deltas."
requires-python = ">=3.13"
authors = [{ name = "Nguyen Tien Son", email = "jasonbmt06@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "asyncpg==0.30.0",
    "numpy==2.1.3",
    "prometheus-client==0.21.0",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "orjson==3.10.12",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "asgi-lifespan==2.1.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
