[package]
name = "leaderboard-rust"
version = "0.1.0"
edition = "2021"
authors = ["Nguyen Tien Son <jasonbmt06@gmail.com>"]
license = "MIT"
description = "LeetRank high-performance leaderboard service (Rust + axum + redis)"
publish = false

[lib]
name = "leaderboard_rust"
path = "src/lib.rs"

[[bin]]
name = "leaderboard-rust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
prometheus = { version = "0.14.0", default-features = false }
redis = { version = "0.27.5", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "uuid"] }
thiserror = "2.0.3"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5.1", features = ["util"] }
http-body-util = "0.1.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
